--- a/index.html
+++ b/index.html
@@ -20,20 +20,16 @@
     }
     #status { width:88px;display:block;float:left;margin-top:15px; }
   </style>
+  <script src="require.js" type="text/javascript"></script>
   </head>
-  <body onload="start()">
-    <div id="content"></div>
-    <div>
-      <span id="status">Connecting...</span>
-      <input type="text" id="input" disabled="disabled" />
-      <button id="btn" onclick="myFunction()">Click me</button>
-    </div>
+  <body onload="play()">
     <script>
-        start = function()
-        {
-            let game = new Client("ws://127.0.0.1:1337");
-        }
+     function play() {
+        require(['dist/Game'], function (Game) {
+            var game = new Game.Game("ws://127.0.0.1:1337");
+        });
+    }
+
     </script>
-    <script src="./dist/client.js"></script>
   </body>
 </html>
