--- a/index.html
+++ b/index.html
@@ -1,35 +1,18 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>WebSockets - Simple chat</title>
-    <style>
-    * { font-family:tahoma; font-size:12px; padding:0px;margin:0px;}
-    p { line-height:18px; }
-    div { width:500px; margin-left:auto; margin-right:auto;}
-    #content { padding:5px; background:#ddd; border-radius:5px;
-        overflow-y: scroll; border:1px solid #CCC;
-        margin-top:10px; height: 160px; }
-    #input { border-radius:2px; border:1px solid #ccc;
-        margin-top:10px; padding:5px; width:400px;
-    }
-    #btn
-    {
-      width: 2vw;
-      height: 2vw;
-    }
-    #status { width:88px;display:block;float:left;margin-top:15px; }
-  </style>
-  <script src="require.js" type="text/javascript"></script>
-  </head>
-  <body onload="play()">
-    <script>
-     function play() {
-        require(['dist/client/Game'], function (Game) {
-            var game = new Game.Game("ws://127.0.0.1:1337");
-        });
-    }
-
-    </script>
-  </body>
+    <head>
+        <meta charset="utf-8">
+        <title>WebSockets - Simple chat</title>
+        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+        <script src="require.js" type="text/javascript"></script>
+    </head>
+    <body onload="play()">
+        <script>
+            function play() {
+                require(['dist/client/Game'], function (Game) {
+                    var game = new Game.Game("ws://127.0.0.1:1337");
+                });
+            }
+        </script>
+    </body>
 </html>
