--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
         <meta charset="utf-8">
         <title>WebSockets - Simple chat</title>
         <script src="require.js" type="text/javascript"></script>
+        <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body onload="play()">
         <script>
